# LORSCODEX

./: .gitignore  CMakeLists.txt  README.md  READMEchild.md  readmequestions.md
docs/: REPORT_READY.md  architecture.md  commands.md  language_spec.md  report_outline.md  testing.md
include/lorsc/: AST.h  Codegen.h  Diagnostics.h  Parser.h  Sema.h  SourceLocation.h
runtime/: main.c
scripts/: build.sh  demo_run.sh  run_tests.sh
src/: AST.cpp  Codegen.cpp  Diagnostics.cpp  Parser.cpp  Sema.cpp  lexer.l  main.cpp  parser.y
tests/integration/: demo_entry.expected  demo_entry.lors  full_feature_showcase.expected  full_feature_showcase.lors  prime_count.expected  prime_count.lors
tests/negative/semantic/: assign_type.lors  call_arity.lors  if_not_bool.lors  redeclare.lors  return_type.lors  ternary_branch_mismatch.lors  undeclared.lors
tests/negative/syntax/: bad_expression.lors  missing_rparen.lors  missing_semicolon.lors
tests/positive/: arithmetic_precedence.lors  bool_logic.lors  float_mix.lors  for_full_form.lors  for_loop.lors  functions.lors  short_circuit.lors  ternary.lors
